# Undefined_AD

./: .coverage  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  README.md  Renhao.md  codecov.yml  coverage.xml  pyproject.toml  requirements.txt  setup.cfg
docs/: Group1-milestone1.ipynb  README.md  about.rst  conf.py  implementation.rst  milestone1.ipynb  milestone2.ipynb  milestone2_progress.ipynb  organization.rst
docs/_build/doctrees/: about.doctree  environment.pickle  implementation.doctree  index.doctree  modules.doctree  organization.doctree  undefined.doctree  usage.doctree
docs/_build/html/: .buildinfo  about.html  organization.html  py-modindex.html  searchindex.js
docs/documentation/: about.rst  conf.py  implementation.rst  index.rst  organization.rst  statement.rst  usage.rst
docs/milestone_docs/: milestone1.ipynb  milestone2.ipynb
docs/sphinx_files/: about.rst  conf.py  implementation.rst  index.rst  organization.rst  usage.rst
htmlcov/: d_40be0abedfd3bebf_API_py.html  d_40be0abedfd3bebf_Calculator_py.html  d_40be0abedfd3bebf_GraphGenerator_py.html  d_40be0abedfd3bebf_UDFunction_py.html  d_40be0abedfd3bebf_Utils_py.html  d_40be0abedfd3bebf___init___py.html  d_40be0abedfd3bebf___main___py.html  index.html
src/undefined/: API.py  Calculator.py  GraphGenerator.py  Parser.py  UDFunction.py  Utils.py  __init__.py
src/undefined.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/undefined_AD.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: run_tests.sh  testFunction.txt  test_API.py  test_Calculator.py  test_UDFunction.py  test_Utils.py  test_graph_generator_operation.py  test_trace.py
(+104 files in other folders)
