[metadata]
name = undefined
version = 1.0.0
author = cs107-undefined
description = Auto differetiation library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cs107-undefined/cs107-FinalProject
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy >= 1.19.0
[options.packages.find]
where = src