[metadata]
name = undefined_AD
version = 2.0.2
author = cs107-undefined
author_email = xinran_tang@g.harvard.edu
description = Auto differetiation library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cs107-undefined/cs107-FinalProject
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy >= 1.19.0
    networkx >= 2.6.3
    matplotlib >= 3.4.3
    sphinx==4.2.0
    sphinx_rtd_theme==1.0.0

[options.packages.find]
where = src

[pypi]
repository: https://upload.pypi.org/legacy/
username: __token__
password: pypi-AgEIcHlwaS5vcmcCJGEzZDMwYmYyLTFlODQtNDZlYy1iZWFjLWExYTllNzA1M2E4MgACJXsicGVybWlzc2lvbnMiOiAidXNlciIsICJ2ZXJzaW9uIjogMX0AAAYgaaR19CldFB9iXCVYirLDnOG_Fd-3ihPlsVFPRcRDU1w